# cpal-website

./: .gitignore  2  CLAUDE.md  Gemfile  PENDING.md  README.md  _config.yml  accepted_papers.md  accepted_tutorials.md  advisory.md  area_chairs.md  call_for_tutorials.md  cfp.md  code_of_conduct.md  deadlines.md  hotels.md  meditation.md  oral_and_spotlight_presentations.md  orals.md  organization_committee.md  organizers.md  other_years.md  policies 2.md  policies.md  posters.md  proceedings.md  proceedings_track.md  program.md  program_highlights.md  program_schedule.md  register_and_attend.md  registration.md  review_guidelines.md  rising_stars.md  rising_stars_awardees.md  rising_stars_guidelines.md  rising_stars_presentations.md  social.md  speakers.md  sponsors.md  (+15 more)
_calendars/: cpal-2024.md  cpal-2024_544078.md  cpal-2025.md  cpal-2026.md
_db/: NEW_SPEAKERS_INSTRUCTIONS.md  README.md  download_speaker_photos.sh  pyproject.toml  reprocess_speakers.py
_db/data/: cpal_2024.py  cpal_2025.py  cpal_2025_session_dict.py  cpal_2026.py  event.py  image-preparer.py  papers.py  program.py  roles.py
_includes/: countdown.html  head_custom.html  header_custom.html  nav.html  nav_footer_custom.html  organizers.html  search_placeholder_custom.html  speakers.html  splash.html  sponsors.html
_layouts/: calendar.html  organizer.html  risingstar.html  risingstar_noimg.html  speaker.html  tutorial.html
_organizers/: alistarh.md  alistarh_dan_544078.md  alistarh_dan_il_544078.md  anandkumar_anima_ac_544078.md  azizan_navid_ac_544078.md  bao.md  bao_chenglong_ac_544078.md  du.md  (+136 more)
(+599 files in other folders)
