[project]
name = "academic-sites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "openreview>=0.0.2",
    "openreview-py>=1.46.3",
    "pyyaml>=6.0.2",
    "torch>=2.6.0",
    "unidecode>=1.3.8",
]
